# This is a list of changes in pygame's history.
#
# SVN revision numbers, and CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG    = fixed a bug that was (or could have been) crashing

[SVN 2921] September 15, 2010
    Merge fsencoding branch back into trunk. This adds corrected Unicode file path
    handling to Pygame. File paths can contain any UTF-32 character, except \x00,
    provided the file system encoding can handle it. It is also one more step
    towards a full Python 3.1 port of Pygame.

[SVN 2914, 2916] September 15, 2010
    Preparation for merge with fsencoding branch

[SVN 2900-2910] August 31-September 11, 2010
    Preparations to freetype for release:
      - fix a bug with base.register_quit import that kept freetype
        from loading
      - improve Unicode handling so can handle all UTF-32 characters
      - enable encode_raw Font method
      - import exception messages
      - add missing error checks of memory allocations
      - attempt to fix text boundary calculation bug that causes
        memory access violations in some cases. Unfinished.

[SVN 2897] August 30, 2010
    update docs to reflect changes in r2855

[SVN 2858] August 18, 2010
    Remove distracting '"_POSIX_C_SOURCE" redefined' GCC warnings from linux builds.

[SVN 2857] August 17, 2010
    [BUG] fix rwobject memory leak when raising a memory error

[SVN 2856] August 15, 2010
    font.c, rwobject.c, font_test.py: Update/correct Python3 svn property
    to better reflect Python 3.1 compatibility

[SVN 2855] August 15, 2010
    font module: improve unicode text handling: can now render Unicode
    characters up to U+FFFF.

[SVN 2854] August 9, 2010
    remove distracting "'PyGAME_C_API' defined but not used" gcc warnings
    from Pygame build

[SVN 2853] August 9, 2010
    mixer.Sound: fix spelling error in an error message and add no-arguments
    check to the unit tests

[SVN 2852] August 9, 2010